# cobalt-opengl-renderer

./: Cargo.toml
models/: CornellBox-Original.mtl  bed-classic.mtl  gto67.mtl  ramen.mtl
scenes/SimpleTest/: test.gltf
shaders/: blur_post.fs  blur_post.vs  edge_post.fs  edge_post.vs  shader.fs  shader.vs  simple.vs  wave_post.fs
src/: camera.rs  egui_menu.rs  main.rs  material.rs  scene.rs  shader.rs  stage.rs
src/cobalt_engine/: app.rs  buffer.rs  camera.rs  engine.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  program.rs  scene.rs  triangle.rs
