[package]
name = "cobalt-opengl-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "*"
tobj = "*"
egui = "*"
egui-miniquad = "*"
glam = "*"
hex = "*"
native-dialog = "0.6.3"
tinytga = "*"
embedded-graphics = "*"
image = "*"